# Matam-HW1

./: CMakeLists.txt  amount_set.c  amount_set.h  amount_set2.c  amount_set_updated.c  linked_list.c  linked_list.h  matamazom.c  matamazom.h
untitled folder/: amount_set.c  main1.c  matamazom.c
